# external-product-fail

./: Cargo.toml
src/: main.rs
