[package]
name = "external-product"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.release]
# lto = "fat"
# codegen-units = 1
# opt-level = 3
# debug = true

# [profile.dev]
# lto = "fat"
# codegen-units = 1
# opt-level = 3
# debug = true

[dependencies]
concrete-core = { version = "1.0.1", features = ["aarch64", "__private_docs"] }
aligned-vec = "0.5"
concrete-csprng = "0.2.1"
dyn-stack = "0.8"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"
